--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "codewebFire",
+    "name": "codewebcxhj",
     "version": "1.0.0",
     "description": "new tea pj",
     "main": "index.js",
